--- a/index.html
+++ b/index.html
@@ -2,27 +2,91 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>GoAI - Nền tảng AI cho Giáo dục</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Giải Pháp AI - Văn Tiến Công</title>
   <style>
     body {
-      background: linear-gradient(to right, #0f172a, #1e293b);
-      color: #fff;
-      font-family: Arial, sans-serif;
-      padding: 50px;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #ff9a8b, #fad0c4);
+      color: white;
       text-align: center;
     }
-    h1 { font-size: 3rem; color: #60a5fa; }
-    p { font-size: 1.2rem; margin-top: 20px; max-width: 600px; margin-left: auto; margin-right: auto; }
-    a.button {
-      background: #3b82f6; padding: 15px 30px; border-radius: 8px;
-      display: inline-block; color: white; text-decoration: none;
+
+    .badge-container {
       margin-top: 30px;
+    }
+
+    .badge {
+      display: inline-block;
+      background-color: rgba(255,255,255,0.2);
+      padding: 8px 16px;
+      border-radius: 20px;
+      margin: 5px;
+      font-size: 14px;
+    }
+
+    h1 {
+      font-size: 48px;
+      margin-top: 20px;
+    }
+
+    h2 {
+      font-size: 36px;
+      color: #c1bfff;
+    }
+
+    p {
+      font-size: 20px;
+      max-width: 700px;
+      margin: auto;
+      margin-top: 20px;
+    }
+
+    .cta-button {
+      margin-top: 30px;
+      background-color: #fcd34d;
+      color: black;
+      padding: 15px 30px;
+      border: none;
+      border-radius: 10px;
+      font-weight: bold;
+      font-size: 18px;
+      cursor: pointer;
+      transition: 0.3s ease;
+    }
+
+    .cta-button:hover {
+      background-color: #facc15;
+    }
+
+    footer {
+      margin-top: 50px;
+      font-size: 14px;
+      opacity: 0.8;
     }
   </style>
 </head>
 <body>
-  <h1>Chào mừng đến với GoAI</h1>
-  <p>Nền tảng ứng dụng trí tuệ nhân tạo trong giáo dục – nâng cao hiệu quả học tập và cá nhân hóa trải nghiệm người học.</p>
-  <a href="#explore" class="button">Khám phá ngay</a>
+  <div class="badge-container">
+    <span class="badge">🧠 Chuyên gia AI</span>
+    <span class="badge">🚀 50+ Công cụ AI</span>
+    <span class="badge">⏳ Tiết kiệm 10 giờ/tuần</span>
+  </div>
+
+  <h1>Văn Tiến Công:</h1>
+  <h2>Giải Pháp AI</h2>
+  <h1>Giúp Bạn Tối Ưu Hóa Công Việc Online</h1>
+
+  <p>
+    Khám phá cách các công cụ AI có thể tự động hóa những công việc nhàm chán,
+    giải phóng thời gian và giúp bạn tập trung vào những gì thực sự quan trọng để bứt phá trong sự nghiệp.
+  </p>
+
+  <button class="cta-button">📥 TẢI BỘ TÀI LIỆU MIỄN PHÍ NGAY</button>
+
+  <footer>
+    © 2025 Văn Tiến Công - goai.edu.vn
+  </footer>
 </body>
 </html>
