--- a/index.html
+++ b/index.html
@@ -3,90 +3,108 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Giải Pháp AI - Văn Tiến Công</title>
+  <title>Văn Tiến Công - Giải Pháp AI</title>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #ff9a8b, #fad0c4);
-      color: white;
+      background: #0a0f24;
+      color: #fff;
+    }
+    header {
+      background: linear-gradient(to right, #2c3e50, #4ca1af);
+      padding: 50px 20px;
       text-align: center;
     }
-
-    .badge-container {
-      margin-top: 30px;
+    header h1 {
+      font-size: 3rem;
+      color: #00ffff;
     }
-
-    .badge {
-      display: inline-block;
-      background-color: rgba(255,255,255,0.2);
-      padding: 8px 16px;
-      border-radius: 20px;
-      margin: 5px;
-      font-size: 14px;
-    }
-
-    h1 {
-      font-size: 48px;
-      margin-top: 20px;
-    }
-
-    h2 {
-      font-size: 36px;
-      color: #c1bfff;
-    }
-
-    p {
-      font-size: 20px;
+    header p {
+      font-size: 1.2rem;
       max-width: 700px;
-      margin: auto;
+      margin: 0 auto;
+    }
+    .profile {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 30px;
+    }
+    .profile img {
+      width: 120px;
+      border-radius: 50%;
+      margin-bottom: 10px;
+    }
+    .contact {
       margin-top: 20px;
     }
-
-    .cta-button {
-      margin-top: 30px;
-      background-color: #fcd34d;
-      color: black;
-      padding: 15px 30px;
-      border: none;
+    .contact a {
+      color: #00ffff;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+    .feedback, .news {
+      padding: 40px 20px;
+      background: #1c1f2f;
+    }
+    .feedback h2, .news h2 {
+      text-align: center;
+      color: #00ffff;
+    }
+    .feedback .item, .news .item {
+      max-width: 800px;
+      margin: 20px auto;
+      background: #2a2f45;
+      padding: 20px;
       border-radius: 10px;
-      font-weight: bold;
-      font-size: 18px;
-      cursor: pointer;
-      transition: 0.3s ease;
     }
-
-    .cta-button:hover {
-      background-color: #facc15;
-    }
-
-    footer {
-      margin-top: 50px;
-      font-size: 14px;
-      opacity: 0.8;
+    .footer {
+      text-align: center;
+      padding: 20px;
+      background: #10121b;
+      color: #aaa;
     }
   </style>
 </head>
 <body>
-  <div class="badge-container">
-    <span class="badge">🧠 Chuyên gia AI</span>
-    <span class="badge">🚀 50+ Công cụ AI</span>
-    <span class="badge">⏳ Tiết kiệm 10 giờ/tuần</span>
+  <header>
+    <h1>Văn Tiến Công - Giải Pháp AI</h1>
+    <p>Nền tảng AI giúc bạn tối ưu hoá công việc online - Giên gửi tất cả những công việc lặp lại.</p>
+  </header>
+
+  <section class="profile">
+    <img src="https://via.placeholder.com/120" alt="avatar">
+    <h2>Văn Tiến Công</h2>
+    <p>Chuyên gia tư vấn ứng dụng AI trong giáo dục và công việc online</p>
+    <div class="contact">
+      <a href="https://zalo.me/0966861089" target="_blank">Zalo</a>
+      <a href="https://facebook.com" target="_blank">Facebook</a>
+    </div>
+  </section>
+
+  <section class="feedback">
+    <h2>Phản hồi khách hàng</h2>
+    <div class="item">
+      "Nhờ bài học của anh Công, mình tiết kiệm được 8 giờ/tuần công việc admin."
+    </div>
+    <div class="item">
+      "Hệ thống AI dễ dùng và có tác động rõ rệt lên năng suất."
+    </div>
+  </section>
+
+  <section class="news">
+    <h2>Cập nhật tin tức AI</h2>
+    <div class="item">
+      <strong>[26/06]</strong> OpenAI ra mắt GPT-5, hỗ trợ giáo dục cá nhân hoá hơn.
+    </div>
+    <div class="item">
+      <strong>[20/06]</strong> 10 công cụ AI cần biết dành cho sinh viên.
+    </div>
+  </section>
+
+  <div class="footer">
+    &copy; 2025 Văn Tiến Công - goai.edu.vn
   </div>
-
-  <h1>Văn Tiến Công:</h1>
-  <h2>Giải Pháp AI</h2>
-  <h1>Giúp Bạn Tối Ưu Hóa Công Việc Online</h1>
-
-  <p>
-    Khám phá cách các công cụ AI có thể tự động hóa những công việc nhàm chán,
-    giải phóng thời gian và giúp bạn tập trung vào những gì thực sự quan trọng để bứt phá trong sự nghiệp.
-  </p>
-
-  <button class="cta-button">📥 TẢI BỘ TÀI LIỆU MIỄN PHÍ NGAY</button>
-
-  <footer>
-    © 2025 Văn Tiến Công - goai.edu.vn
-  </footer>
 </body>
 </html>
