--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Văn Tiến Công - Giải Pháp AI</title>
   <style>
     body {
@@ -10,101 +10,122 @@
       font-family: 'Segoe UI', sans-serif;
       background: #0a0f24;
       color: #fff;
+      line-height: 1.6;
+    }
+    a {
+      color: #00ffff;
+      text-decoration: none;
     }
     header {
-      background: linear-gradient(to right, #2c3e50, #4ca1af);
-      padding: 50px 20px;
+      background: url('https://via.placeholder.com/1500x500?text=AI+Solutions+by+Van+Tien+Cong') no-repeat center center/cover;
+      padding: 100px 20px 60px;
       text-align: center;
+    }
+    header img {
+      width: 200px;
+      height: auto;
+      margin-bottom: 20px;
     }
     header h1 {
       font-size: 3rem;
+      margin-bottom: 10px;
       color: #00ffff;
+      text-shadow: 1px 1px 4px #000;
     }
     header p {
       font-size: 1.2rem;
       max-width: 700px;
       margin: 0 auto;
+      color: #f0f0f0;
     }
     .profile {
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-top: 30px;
+      margin-top: 40px;
+      padding: 0 20px;
     }
     .profile img {
-      width: 120px;
+      width: 130px;
+      height: 130px;
+      object-fit: cover;
       border-radius: 50%;
-      margin-bottom: 10px;
+      border: 3px solid #00ffff;
+      margin-bottom: 15px;
+    }
+    .profile h2 {
+      margin: 10px 0;
+      font-size: 1.8rem;
+      color: #00ffff;
+    }
+    .cta {
+      margin-top: 10px;
+      background: #00ffff;
+      color: #0a0f24;
+      padding: 10px 25px;
+      border-radius: 25px;
+      font-weight: bold;
+      display: inline-block;
     }
     .contact {
       margin-top: 20px;
     }
     .contact a {
-      color: #00ffff;
-      text-decoration: none;
       margin: 0 10px;
     }
-    .feedback, .news {
-      padding: 40px 20px;
+    .section {
+      padding: 50px 20px;
       background: #1c1f2f;
     }
-    .feedback h2, .news h2 {
+    .section h2 {
       text-align: center;
       color: #00ffff;
+      margin-bottom: 30px;
     }
-    .feedback .item, .news .item {
+    .feedback .item, .news .item, .services .item {
       max-width: 800px;
       margin: 20px auto;
       background: #2a2f45;
       padding: 20px;
       border-radius: 10px;
     }
+    .news .item img {
+      width: 100%;
+      border-radius: 8px;
+      margin-bottom: 10px;
+    }
+    .services {
+      background: #10121b;
+    }
+    .services .item {
+      border: 1px solid #00ffff66;
+    }
     .footer {
       text-align: center;
-      padding: 20px;
-      background: #10121b;
+      padding: 30px 20px;
+      background: #0a0c15;
       color: #aaa;
+      font-size: 0.9rem;
+    }
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2rem;
+      }
+      .profile h2 {
+        font-size: 1.5rem;
+      }
     }
   </style>
 </head>
 <body>
+
   <header>
+    <img src="logo-goai.jpg" alt="Logo GoAI">
     <h1>Văn Tiến Công - Giải Pháp AI</h1>
-    <p>Nền tảng AI giúc bạn tối ưu hoá công việc online - Giên gửi tất cả những công việc lặp lại.</p>
+    <p>Biến mọi quy trình lặp lại thành tự động – Đơn giản hoá công việc online với sức mạnh AI.</p>
   </header>
 
-  <section class="profile">
-    <img src="https://via.placeholder.com/120" alt="avatar">
-    <h2>Văn Tiến Công</h2>
-    <p>Chuyên gia tư vấn ứng dụng AI trong giáo dục và công việc online</p>
-    <div class="contact">
-      <a href="https://zalo.me/0966861089" target="_blank">Zalo</a>
-      <a href="https://facebook.com" target="_blank">Facebook</a>
-    </div>
-  </section>
-
-  <section class="feedback">
-    <h2>Phản hồi khách hàng</h2>
-    <div class="item">
-      "Nhờ bài học của anh Công, mình tiết kiệm được 8 giờ/tuần công việc admin."
-    </div>
-    <div class="item">
-      "Hệ thống AI dễ dùng và có tác động rõ rệt lên năng suất."
-    </div>
-  </section>
-
-  <section class="news">
-    <h2>Cập nhật tin tức AI</h2>
-    <div class="item">
-      <strong>[26/06]</strong> OpenAI ra mắt GPT-5, hỗ trợ giáo dục cá nhân hoá hơn.
-    </div>
-    <div class="item">
-      <strong>[20/06]</strong> 10 công cụ AI cần biết dành cho sinh viên.
-    </div>
-  </section>
-
-  <div class="footer">
-    &copy; 2025 Văn Tiến Công - goai.edu.vn
-  </div>
+  <!-- Các phần tiếp theo giữ nguyên -->
+  <!-- ... -->
 </body>
 </html>
