--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
       padding: 100px 20px 60px;
       text-align: center;
     }
-    header img {
-      width: 200px;
-      height: auto;
-      margin-bottom: 20px;
-    }
     header h1 {
       font-size: 3rem;
       margin-bottom: 10px;
@@ -119,13 +114,63 @@
 </head>
 <body>
 
-  <header>
-    <img src="logo-goai.jpg" alt="Logo GoAI">
-    <h1>Văn Tiến Công - Giải Pháp AI</h1>
-    <p>Biến mọi quy trình lặp lại thành tự động – Đơn giản hoá công việc online với sức mạnh AI.</p>
-  </header>
+  <header style="text-align: center;">
+  <img src="logo-goai.jpg" alt="Logo GoAI" style="width: 200px; height: auto; margin-bottom: 15px;">
+  <h1>Văn Tiến Công - Giải Pháp AI</h1>
+  <p>Biến mọi quy trình lặp lại thành tự động – Đơn giản hoá công việc online với sức mạnh AI.</p>
+</header>
 
-  <!-- Các phần tiếp theo giữ nguyên -->
-  <!-- ... -->
+  <section class="profile">
+    <img src="https://via.placeholder.com/130" alt="avatar">
+    <h2>Văn Tiến Công</h2>
+    <p>Chuyên gia ứng dụng AI trong giáo dục và kinh doanh online. Tôi giúp bạn khai thác AI để làm việc thông minh hơn, không chăm chỉ hơn.</p>
+    <a href="https://zalo.me/0966861089" class="cta" target="_blank">Liên hệ Zalo ngay</a>
+    <div class="contact">
+      <a href="https://facebook.com" target="_blank">Facebook</a> |
+      <a href="mailto:contact@goai.edu.vn">Email</a>
+    </div>
+  </section>
+
+  <section class="section services">
+    <h2>Dịch vụ nổi bật</h2>
+    <div class="item">
+      ✅ Tư vấn triển khai AI trong giáo dục – đào tạo giáo viên & học sinh
+    </div>
+    <div class="item">
+      ✅ Thiết kế hệ thống video AI cho doanh nghiệp (quảng cáo, kỷ niệm, đào tạo)
+    </div>
+    <div class="item">
+      ✅ Đào tạo Affiliate AI – xây kênh thu nhập từ công cụ AI
+    </div>
+  </section>
+
+  <section class="section feedback">
+    <h2>Phản hồi từ khách hàng</h2>
+    <div class="item">
+      "Nhờ anh Công mình tiết kiệm 2-3 giờ mỗi ngày chỉ riêng công việc gõ báo cáo. AI làm hết!"
+    </div>
+    <div class="item">
+      "Học từ video của anh rất dễ hiểu, thực tế. Mình đã tự làm landing page AI chỉ sau 1 ngày."
+    </div>
+  </section>
+
+  <section class="section news">
+    <h2>Tin tức AI mới nhất</h2>
+    <div class="item">
+      <img src="https://via.placeholder.com/800x300?text=GPT-5+Launch">
+      <strong>[26/06]</strong> OpenAI chính thức ra mắt GPT-5 với khả năng tạo video thời gian thực.
+    </div>
+    <div class="item">
+      <img src="https://via.placeholder.com/800x300?text=AI+Tools+for+Students">
+      <strong>[20/06]</strong> Top 10 công cụ AI miễn phí giúp sinh viên tiết kiệm thời gian.
+    </div>
+  </section>
+
+  <div class="footer">
+    &copy; 2025 Văn Tiến Công | goai.edu.vn<br>
+    Kết nối Zalo: <a href="https://zalo.me/0966861089">0966861089</a> |
+    Facebook: <a href="https://facebook.com" target="_blank">fb.com</a>
+  </div>
+
 </body>
 </html>
