--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <body>
 
   <header style="text-align: center;">
-  <img src="logo-goai.jpg" alt="Logo GoAI" style="width: 200px; height: auto; margin-bottom: 15px;">
+<img src="2C8CFF36-B753-49C5-81FF-59A405C1464C.JPG" alt="Logo GoAI" style="width: 200px; height: auto;">
   <h1>Văn Tiến Công - Giải Pháp AI</h1>
   <p>Biến mọi quy trình lặp lại thành tự động – Đơn giản hoá công việc online với sức mạnh AI.</p>
 </header>
