--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: #0a0f24;
+      background: #0a0c15;
       color: #fff;
       line-height: 1.6;
     }
     a {
-      color: #00ffff;
+      color: #FFD700;
       text-decoration: none;
     }
     header {
@@ -24,7 +24,7 @@
     header h1 {
       font-size: 3rem;
       margin-bottom: 10px;
-      color: #00ffff;
+      color: #FFD700;
       text-shadow: 1px 1px 4px #000;
     }
     header p {
@@ -45,17 +45,22 @@
       height: 130px;
       object-fit: cover;
       border-radius: 50%;
-      border: 3px solid #00ffff;
+      border: 3px solid #FFD700;
       margin-bottom: 15px;
     }
     .profile h2 {
       margin: 10px 0;
       font-size: 1.8rem;
-      color: #00ffff;
+      color: #FFD700;
+    }
+    .profile p {
+      text-align: center;
+      max-width: 600px;
+      margin-bottom: 10px;
     }
     .cta {
       margin-top: 10px;
-      background: #00ffff;
+      background: #FFD700;
       color: #0a0f24;
       padding: 10px 25px;
       border-radius: 25px;
@@ -74,7 +79,7 @@
     }
     .section h2 {
       text-align: center;
-      color: #00ffff;
+      color: #FFD700;
       margin-bottom: 30px;
     }
     .feedback .item, .news .item, .services .item {
@@ -93,7 +98,47 @@
       background: #10121b;
     }
     .services .item {
-      border: 1px solid #00ffff66;
+      border: 1px solid #FFD700;
+    }
+    /* Đăng ký nhận tài liệu */
+    .signup {
+      padding: 50px 20px;
+      background: #0a0c15;
+      text-align: center;
+    }
+    .signup h2 {
+      color: #FFD700;
+      margin-bottom: 20px;
+    }
+    .signup p {
+      max-width: 600px;
+      margin: 0 auto 20px;
+    }
+    .signup form {
+      max-width: 500px;
+      margin: 0 auto;
+      background: #1c1f2f;
+      padding: 20px;
+      border-radius: 10px;
+    }
+    .signup input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #FFD700;
+      border-radius: 5px;
+      background: #0a0c15;
+      color: #fff;
+    }
+    .signup button {
+      width: 100%;
+      padding: 10px;
+      background: #FFD700;
+      color: #0a0f24;
+      border: none;
+      border-radius: 5px;
+      font-weight: bold;
+      cursor: pointer;
     }
     .footer {
       text-align: center;
@@ -115,15 +160,15 @@
 <body>
 
   <header style="text-align: center;">
-<img src="2C8CFF36-B753-49C5-81FF-59A405C1464C.JPG" alt="Logo GoAI" style="width: 200px; height: auto;">
-  <h1>Văn Tiến Công - Giải Pháp AI</h1>
-  <p>Biến mọi quy trình lặp lại thành tự động – Đơn giản hoá công việc online với sức mạnh AI.</p>
-</header>
+    <img src="2C8CFF36-B753-49C5-81FF-59A405C1464C.JPG" alt="Logo GoAI" style="width: 200px; height: auto;">
+    <h1>Văn Tiến Công - Giải Pháp AI</h1>
+    <p>Biến mọi quy trình lặp lại thành tự động – Đơn giản hoá công việc online với sức mạnh AI.</p>
+  </header>
 
   <section class="profile">
     <img src="https://via.placeholder.com/130" alt="avatar">
     <h2>Văn Tiến Công</h2>
-    <p>Chuyên gia ứng dụng AI trong giáo dục và kinh doanh online. Tôi giúp bạn khai thác AI để làm việc thông minh hơn, không chăm chỉ hơn.</p>
+    <p>Chuyên gia ứng dụng AI trong giáo dục và kinh doanh online. Với hơn 10 năm kinh nghiệm trong lĩnh vực công nghệ, tôi đã triển khai thành công nhiều dự án AI cho các tổ chức giáo dục và doanh nghiệp trực tuyến. Mục tiêu của tôi là giúp bạn làm việc thông minh hơn, không cần làm nhiều hơn bằng sức mạnh của AI.</p>
     <a href="https://zalo.me/0966861089" class="cta" target="_blank">Liên hệ Zalo ngay</a>
     <div class="contact">
       <a href="https://facebook.com" target="_blank">Facebook</a> |
@@ -131,10 +176,21 @@
     </div>
   </section>
 
+  <!-- Đăng ký nhận tài liệu miễn phí -->
+  <section class="section signup">
+    <h2>Đăng ký nhận tài liệu miễn phí</h2>
+    <p>Nhập tên và địa chỉ Gmail của bạn để nhận ngay bộ tài liệu chuyên sâu hoàn toàn miễn phí:</p>
+    <form>
+      <input type="text" placeholder="Tên của bạn" required>
+      <input type="email" placeholder="Gmail của bạn" required>
+      <button type="submit">Tải Bộ Tài Liệu Miễn Phí Tại Đây</button>
+    </form>
+  </section>
+
   <section class="section services">
     <h2>Dịch vụ nổi bật</h2>
     <div class="item">
-      ✅ Tư vấn triển khai AI trong giáo dục – đào tạo giáo viên & học sinh
+      ✅ Tư vấn triển khai AI trong giáo dục – đào tạo giáo viên &amp; học sinh
     </div>
     <div class="item">
       ✅ Thiết kế hệ thống video AI cho doanh nghiệp (quảng cáo, kỷ niệm, đào tạo)
