✨ Cập nhật ảnh profile Tiến Công
🖼️ Features:
- Thay thế ảnh Unsplash bằng ảnh cá nhân Tiến Công
- Kích thước: 587x880px (tỷ lệ portrait hoàn hảo)
- Dung lượng: 710KB (tối ưu cho web)
- Chất lượng cao, sắc nét cho mọi thiết bị
- Hiệu ứng glow và pulse vẫn hoạt động hoàn hảo

🎯 Branding:
- Tăng độ tin cậy với ảnh founder thật
- Professional và thân thiện
- Phù hợp với thương hiệu GO AI

--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
             <!-- Profile Section -->
             <div class="profile-section">
                 <div class="profile-image-container">
-                    <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80" alt="Tiến Công - Nhà sáng lập học viện GO AI" class="profile-image">
+                    <img src="tien-cong-profile.png" alt="Tiến Công - Nhà sáng lập học viện GO AI" class="profile-image">
                 </div>
                 <div class="profile-info">
                     <div class="profile-name">Tiến Công</div>
