--- a/index.html
+++ b/index.html
@@ -169,8 +169,9 @@
         .stats-row {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 1rem;
-            margin-bottom: 2rem;
+            gap: 0.8rem;
+            margin-bottom: 1.5rem;
+            margin-top: 2rem;
         }
 
         /* Desktop/Mobile visibility control */
@@ -185,8 +186,8 @@
         .stat-item {
             background: rgba(25, 25, 25, 0.8);
             border: 1px solid rgba(249, 200, 70, 0.2);
-            border-radius: 10px;
-            padding: 1rem 0.8rem;
+            border-radius: 8px;
+            padding: 0.8rem 0.6rem;
             text-align: center;
             position: relative;
             transition: all 0.3s ease;
@@ -200,7 +201,7 @@
             right: 0;
             height: 2px;
             background: linear-gradient(90deg, #f9c846, #ffd700);
-            border-radius: 10px 10px 0 0;
+            border-radius: 8px 8px 0 0;
         }
 
         .stat-item:hover {
@@ -209,17 +210,17 @@
         }
 
         .stat-number {
-            font-size: 1.6rem;
+            font-size: 1.4rem;
             font-weight: 800;
             background: linear-gradient(135deg, #f9c846 0%, #ffd700 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-            margin-bottom: 0.3rem;
+            margin-bottom: 0.2rem;
         }
 
         .stat-label {
-            font-size: 0.85rem;
+            font-size: 0.75rem;
             color: #cccccc;
             font-weight: 500;
         }
@@ -365,7 +366,7 @@
             background: rgba(15, 15, 15, 0.9);
             border: 1px solid rgba(249, 200, 70, 0.2);
             border-radius: 24px;
-            padding: 3rem;
+            padding: 2rem;
             backdrop-filter: blur(20px);
             position: relative;
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
@@ -383,61 +384,62 @@
         }
 
         .form-title {
-            font-size: 2rem;
+            font-size: 1.6rem;
             font-weight: 700;
             color: #f9c846;
-            margin-bottom: 1.5rem;
+            margin-bottom: 1.2rem;
             text-align: center;
         }
 
         .benefits-list {
-            margin-bottom: 2.5rem;
+            margin-bottom: 1.8rem;
         }
 
         .benefit-item {
             display: flex;
             align-items: flex-start;
-            gap: 1rem;
-            margin-bottom: 1.5rem;
-            padding: 1rem;
+            gap: 0.8rem;
+            margin-bottom: 1rem;
+            padding: 0.8rem;
             background: rgba(25, 25, 25, 0.6);
-            border-radius: 12px;
+            border-radius: 10px;
             border-left: 3px solid #f9c846;
         }
 
         .benefit-icon {
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             color: #f9c846;
-            margin-top: 0.2rem;
+            margin-top: 0.1rem;
+            flex-shrink: 0;
         }
 
         .benefit-text {
-            font-size: 1rem;
+            font-size: 0.9rem;
             color: #e0e0e0;
-            line-height: 1.5;
+            line-height: 1.4;
         }
 
         /* Form Styles */
         .form-group {
-            margin-bottom: 1.5rem;
+            margin-bottom: 1.2rem;
         }
 
         .form-label {
             display: block;
-            font-size: 1rem;
+            font-size: 0.9rem;
             font-weight: 600;
             color: #f9c846;
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.4rem;
         }
 
         .form-input {
             width: 100%;
-            padding: 1rem 1.2rem;
+            padding: 0.9rem 1rem;
             border: 2px solid rgba(249, 200, 70, 0.2);
-            border-radius: 12px;
+            border-radius: 10px;
             background: rgba(25, 25, 25, 0.8);
             color: #ffffff;
-            font-size: 1rem;
+            font-size: 0.9rem;
             transition: all 0.3s ease;
             font-family: 'Inter', sans-serif;
         }
@@ -446,7 +448,7 @@
             outline: none;
             border-color: #f9c846;
             background: rgba(25, 25, 25, 0.9);
-            box-shadow: 0 0 0 4px rgba(249, 200, 70, 0.1);
+            box-shadow: 0 0 0 3px rgba(249, 200, 70, 0.1);
         }
 
         .form-input::placeholder {
@@ -455,23 +457,24 @@
 
         .submit-button {
             width: 100%;
-            padding: 1.2rem;
+            padding: 1rem;
             background: linear-gradient(135deg, #f9c846 0%, #ffd700 100%);
             border: none;
-            border-radius: 12px;
+            border-radius: 10px;
             color: #0a0a0a;
-            font-size: 1.1rem;
+            font-size: 1rem;
             font-weight: 700;
             cursor: pointer;
             transition: all 0.3s ease;
             text-transform: uppercase;
             letter-spacing: 0.5px;
             font-family: 'Inter', sans-serif;
+            margin-top: 0.5rem;
         }
 
         .submit-button:hover {
             transform: translateY(-2px);
-            box-shadow: 0 10px 25px rgba(249, 200, 70, 0.4);
+            box-shadow: 0 8px 20px rgba(249, 200, 70, 0.4);
             filter: brightness(1.1);
         }
 
@@ -612,26 +615,34 @@
         @media (max-width: 1024px) {
             .landing-container {
                 grid-template-columns: 1fr;
-                gap: 3rem;
+                gap: 2.5rem;
                 padding: 1.5rem;
             }
 
             .main-title {
-                font-size: 2.8rem;
+                font-size: 2.6rem;
             }
 
             .stats-row {
                 grid-template-columns: repeat(3, 1fr);
-                gap: 1rem;
+                gap: 0.8rem;
             }
 
             .stat-number {
-                font-size: 1.8rem;
+                font-size: 1.5rem;
             }
 
             .profile-image {
-                width: 240px;
-                height: 240px;
+                width: 220px;
+                height: 220px;
+            }
+
+            .right-section {
+                padding: 1.8rem;
+            }
+
+            .form-title {
+                font-size: 1.5rem;
             }
         }
 
@@ -703,11 +714,30 @@
 
             /* Form styling for mobile */
             .form-title {
-                font-size: 1.6rem;
+                font-size: 1.4rem;
             }
 
             .benefit-item {
+                padding: 0.7rem;
+                margin-bottom: 0.8rem;
+            }
+
+            .benefit-text {
+                font-size: 0.85rem;
+            }
+
+            .form-group {
+                margin-bottom: 1rem;
+            }
+
+            .form-input {
                 padding: 0.8rem;
+                font-size: 0.9rem;
+            }
+
+            .submit-button {
+                padding: 0.9rem;
+                font-size: 0.95rem;
             }
 
             /* Stats styling for mobile */
@@ -769,15 +799,25 @@
 
             /* Make form more prominent on small screens */
             .form-title {
-                font-size: 1.4rem;
+                font-size: 1.2rem;
             }
 
             .benefit-item {
-                padding: 0.7rem;
-                margin-bottom: 1rem;
+                padding: 0.6rem;
+                margin-bottom: 0.7rem;
             }
 
             .benefit-text {
+                font-size: 0.8rem;
+            }
+
+            .form-input {
+                padding: 0.7rem;
+                font-size: 0.85rem;
+            }
+
+            .submit-button {
+                padding: 0.8rem;
                 font-size: 0.9rem;
             }
         }
