--- a/index.html
+++ b/index.html
@@ -235,10 +235,86 @@
         }
 
         .main-title .highlight {
-            background: linear-gradient(135deg, #f9c846 0%, #ffd700 100%);
+            background: linear-gradient(135deg, #f9c846 0%, #ffd700 50%, #fff176 100%);
+            background-size: 200% 200%;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            position: relative;
+            display: inline-block;
+            animation: titleGlow 2s ease-in-out infinite, titleShimmer 3s ease-in-out infinite;
+            filter: drop-shadow(0 0 10px rgba(249, 200, 70, 0.5));
+        }
+
+        .main-title .highlight::before {
+            content: '';
+            position: absolute;
+            top: -5px;
+            left: -5px;
+            right: -5px;
+            bottom: -5px;
+            background: linear-gradient(135deg, #f9c846 0%, #ffd700 50%, #fff176 100%);
+            filter: blur(15px);
+            opacity: 0.4;
+            z-index: -1;
+            animation: titlePulse 2s ease-in-out infinite;
+            border-radius: 10px;
+        }
+
+        .main-title .highlight::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.2), transparent, rgba(255, 255, 255, 0.2));
+            background-size: 200% 200%;
+            animation: titleFlash 4s ease-in-out infinite;
+            z-index: 1;
+            border-radius: 5px;
+        }
+
+        @keyframes titleGlow {
+            0%, 100% {
+                filter: drop-shadow(0 0 10px rgba(249, 200, 70, 0.5)) brightness(1);
+                transform: scale(1);
+            }
+            50% {
+                filter: drop-shadow(0 0 25px rgba(249, 200, 70, 0.8)) drop-shadow(0 0 35px rgba(255, 215, 0, 0.6)) brightness(1.3);
+                transform: scale(1.03);
+            }
+        }
+
+        @keyframes titleShimmer {
+            0%, 100% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+        }
+
+        @keyframes titlePulse {
+            0%, 100% {
+                opacity: 0.4;
+                transform: scale(1);
+            }
+            50% {
+                opacity: 0.8;
+                transform: scale(1.08);
+            }
+        }
+
+        @keyframes titleFlash {
+            0%, 90%, 100% {
+                opacity: 0;
+                background-position: -200% 0;
+            }
+            5%, 15% {
+                opacity: 0.6;
+                background-position: 200% 0;
+            }
         }
 
         .subtitle {
@@ -458,7 +534,8 @@
         .submit-button {
             width: 100%;
             padding: 1rem;
-            background: linear-gradient(135deg, #f9c846 0%, #ffd700 100%);
+            background: linear-gradient(135deg, #f9c846 0%, #ffd700 50%, #fff176 100%);
+            background-size: 200% 200%;
             border: none;
             border-radius: 10px;
             color: #0a0a0a;
@@ -470,16 +547,126 @@
             letter-spacing: 0.5px;
             font-family: 'Inter', sans-serif;
             margin-top: 0.5rem;
+            position: relative;
+            overflow: hidden;
+            animation: buttonGlow 2.5s ease-in-out infinite, buttonPulse 3s ease-in-out infinite;
+            box-shadow: 
+                0 4px 15px rgba(249, 200, 70, 0.4),
+                0 0 20px rgba(249, 200, 70, 0.3),
+                inset 0 1px 0 rgba(255, 255, 255, 0.3);
+        }
+
+        .submit-button::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.6), transparent);
+            transition: left 0.5s;
+            animation: buttonShine 3s ease-in-out infinite;
+        }
+
+        .submit-button::after {
+            content: '';
+            position: absolute;
+            top: -2px;
+            left: -2px;
+            right: -2px;
+            bottom: -2px;
+            background: linear-gradient(135deg, #f9c846, #ffd700, #fff176, #f9c846);
+            background-size: 300% 300%;
+            border-radius: 12px;
+            z-index: -1;
+            animation: buttonBorder 4s ease-in-out infinite;
+            filter: blur(3px);
         }
 
         .submit-button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 8px 20px rgba(249, 200, 70, 0.4);
-            filter: brightness(1.1);
+            transform: translateY(-4px) scale(1.03);
+            box-shadow: 
+                0 15px 30px rgba(249, 200, 70, 0.6),
+                0 0 40px rgba(249, 200, 70, 0.5),
+                inset 0 1px 0 rgba(255, 255, 255, 0.4);
+            filter: brightness(1.2);
+            animation: buttonHoverGlow 1s ease-in-out infinite, buttonPulse 1.5s ease-in-out infinite;
+        }
+
+        .submit-button:hover::before {
+            left: 100%;
         }
 
         .submit-button:active {
-            transform: translateY(0);
+            transform: translateY(-2px) scale(1.01);
+        }
+
+        @keyframes buttonGlow {
+            0%, 100% {
+                box-shadow: 
+                    0 4px 15px rgba(249, 200, 70, 0.4),
+                    0 0 20px rgba(249, 200, 70, 0.3),
+                    inset 0 1px 0 rgba(255, 255, 255, 0.3);
+            }
+            50% {
+                box-shadow: 
+                    0 6px 25px rgba(249, 200, 70, 0.7),
+                    0 0 35px rgba(249, 200, 70, 0.6),
+                    0 0 50px rgba(255, 215, 0, 0.4),
+                    inset 0 1px 0 rgba(255, 255, 255, 0.5);
+            }
+        }
+
+        @keyframes buttonPulse {
+            0%, 100% {
+                background-position: 0% 50%;
+                transform: scale(1);
+            }
+            50% {
+                background-position: 100% 50%;
+                transform: scale(1.01);
+            }
+        }
+
+        @keyframes buttonBorder {
+            0%, 100% {
+                background-position: 0% 50%;
+                opacity: 0.6;
+            }
+            50% {
+                background-position: 100% 50%;
+                opacity: 1;
+            }
+        }
+
+        @keyframes buttonShine {
+            0%, 60% {
+                left: -100%;
+                opacity: 0;
+            }
+            70%, 90% {
+                opacity: 1;
+            }
+            100% {
+                left: 100%;
+                opacity: 0;
+            }
+        }
+
+        @keyframes buttonHoverGlow {
+            0%, 100% {
+                box-shadow: 
+                    0 15px 30px rgba(249, 200, 70, 0.6),
+                    0 0 40px rgba(249, 200, 70, 0.5),
+                    inset 0 1px 0 rgba(255, 255, 255, 0.4);
+            }
+            50% {
+                box-shadow: 
+                    0 20px 40px rgba(249, 200, 70, 0.8),
+                    0 0 60px rgba(249, 200, 70, 0.7),
+                    0 0 80px rgba(255, 215, 0, 0.5),
+                    inset 0 1px 0 rgba(255, 255, 255, 0.6);
+            }
         }
 
         /* Ticker Animation */
