--- a/index.html
+++ b/index.html
@@ -235,85 +235,48 @@
         }
 
         .main-title .highlight {
-            background: linear-gradient(135deg, #f9c846 0%, #ffd700 50%, #fff176 100%);
-            background-size: 200% 200%;
+            background: linear-gradient(135deg, #f9c846 0%, #ffd700 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
             position: relative;
             display: inline-block;
-            animation: titleGlow 2s ease-in-out infinite, titleShimmer 3s ease-in-out infinite;
-            filter: drop-shadow(0 0 10px rgba(249, 200, 70, 0.5));
+            animation: titleGlow 3s ease-in-out infinite;
         }
 
         .main-title .highlight::before {
-            content: '';
-            position: absolute;
-            top: -5px;
-            left: -5px;
-            right: -5px;
-            bottom: -5px;
-            background: linear-gradient(135deg, #f9c846 0%, #ffd700 50%, #fff176 100%);
-            filter: blur(15px);
-            opacity: 0.4;
-            z-index: -1;
-            animation: titlePulse 2s ease-in-out infinite;
-            border-radius: 10px;
-        }
-
-        .main-title .highlight::after {
             content: '';
             position: absolute;
             top: 0;
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(135deg, rgba(255, 255, 255, 0.2), transparent, rgba(255, 255, 255, 0.2));
-            background-size: 200% 200%;
-            animation: titleFlash 4s ease-in-out infinite;
-            z-index: 1;
-            border-radius: 5px;
+            background: linear-gradient(135deg, #f9c846 0%, #ffd700 100%);
+            filter: blur(8px);
+            opacity: 0.3;
+            z-index: -1;
+            animation: titlePulse 3s ease-in-out infinite;
         }
 
         @keyframes titleGlow {
             0%, 100% {
-                filter: drop-shadow(0 0 10px rgba(249, 200, 70, 0.5)) brightness(1);
+                filter: brightness(1) drop-shadow(0 0 5px rgba(249, 200, 70, 0.3));
                 transform: scale(1);
             }
             50% {
-                filter: drop-shadow(0 0 25px rgba(249, 200, 70, 0.8)) drop-shadow(0 0 35px rgba(255, 215, 0, 0.6)) brightness(1.3);
-                transform: scale(1.03);
-            }
-        }
-
-        @keyframes titleShimmer {
-            0%, 100% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
+                filter: brightness(1.1) drop-shadow(0 0 10px rgba(249, 200, 70, 0.5));
+                transform: scale(1.01);
             }
         }
 
         @keyframes titlePulse {
             0%, 100% {
-                opacity: 0.4;
+                opacity: 0.3;
                 transform: scale(1);
             }
             50% {
-                opacity: 0.8;
-                transform: scale(1.08);
-            }
-        }
-
-        @keyframes titleFlash {
-            0%, 90%, 100% {
-                opacity: 0;
-                background-position: -200% 0;
-            }
-            5%, 15% {
-                opacity: 0.6;
-                background-position: 200% 0;
+                opacity: 0.5;
+                transform: scale(1.03);
             }
         }
 
