--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GO AI - Nhận Bộ Tài Liệu PROMPT Miễn Phí</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -227,11 +227,14 @@
 
         /* Main Title */
         .main-title {
+            font-family: 'Poppins', 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             font-size: 3.5rem;
             font-weight: 800;
             color: #ffffff;
             margin-bottom: 1.5rem;
             line-height: 1.2;
+            letter-spacing: -0.02em;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
         }
 
         .main-title .highlight {
@@ -239,6 +242,9 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            font-weight: 900;
+            text-shadow: none;
+            filter: drop-shadow(0 2px 4px rgba(249, 200, 70, 0.3));
         }
 
         .subtitle {
@@ -798,6 +804,7 @@
             .main-title {
                 font-size: 2.2rem;
                 margin-bottom: 1rem;
+                letter-spacing: -0.015em;
             }
 
             .subtitle {
@@ -881,6 +888,7 @@
         @media (max-width: 480px) {
             .main-title {
                 font-size: 1.8rem;
+                letter-spacing: -0.01em;
             }
 
             .subtitle {
